--- a/StaffPicks/VideoTableViewCell.xib
+++ b/StaffPicks/VideoTableViewCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,6 +15,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="349" height="106"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LNC-2m-P6m">
+                        <rect key="frame" x="0.0" y="0.0" width="349" height="106"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2FN-iE-bjp">
                         <rect key="frame" x="10" y="75" width="42" height="21"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5244348404255319" colorSpace="calibratedRGB"/>
@@ -28,19 +32,39 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LNC-2m-P6m">
-                        <rect key="frame" x="71" y="8" width="102" height="90"/>
-                    </imageView>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="LNC-2m-P6m" secondAttribute="trailing" id="0QH-8R-ejc"/>
                     <constraint firstAttribute="bottom" secondItem="7Q3-pu-xeQ" secondAttribute="bottom" constant="10" id="6f6-eD-RP0"/>
                     <constraint firstAttribute="bottom" secondItem="2FN-iE-bjp" secondAttribute="bottom" constant="10" id="D7O-nZ-N2b"/>
+                    <constraint firstItem="LNC-2m-P6m" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="JfI-OW-D4J"/>
+                    <constraint firstAttribute="trailing" secondItem="LNC-2m-P6m" secondAttribute="trailing" id="Mzm-US-hKk"/>
+                    <constraint firstItem="LNC-2m-P6m" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Ssl-4h-hoJ"/>
+                    <constraint firstItem="LNC-2m-P6m" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="ZFg-EF-rl9"/>
                     <constraint firstAttribute="trailing" secondItem="7Q3-pu-xeQ" secondAttribute="trailing" constant="10" id="dsV-9v-tHM"/>
                     <constraint firstItem="7Q3-pu-xeQ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2FN-iE-bjp" secondAttribute="trailing" constant="10" id="r04-cQ-9Zz"/>
                     <constraint firstItem="2FN-iE-bjp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="vcn-we-O9b"/>
+                    <constraint firstAttribute="bottom" secondItem="LNC-2m-P6m" secondAttribute="bottom" id="xn4-la-S5r"/>
+                    <constraint firstItem="LNC-2m-P6m" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="yf8-y4-NmU"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="0QH-8R-ejc"/>
+                        <exclude reference="JfI-OW-D4J"/>
+                        <exclude reference="ZFg-EF-rl9"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <color key="backgroundColor" red="1" green="0.279723827759911" blue="0.37788404110826035" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="LNC-2m-P6m" secondAttribute="bottom" id="f9i-3K-Etx"/>
+            </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="f9i-3K-Etx"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="durationLabel" destination="7Q3-pu-xeQ" id="MvN-xb-NTE"/>
                 <outlet property="nameLabel" destination="2FN-iE-bjp" id="E5F-Og-TZg"/>
